HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameNoActiveRegion/Expected.uv
//! Expected diagnostic metadata for the FrameNoActiveRegion rejected-source specimen.

expectedDiagnostic("E-MEM-1207", "rule.18.Frame-NoActiveRegion-Err")
